--- a/frontend/pages/blazers.html
+++ b/frontend/pages/blazers.html
@@ -1,3 +1,210 @@
-<section id="blazers">
+<section id="blazers" class="py-5">
+  <div class="container">
+    <h2 class="mb-4 text-center">BLAZERS</h2>
+    <div class="row g-4">
+
+      <div class="col-6 col-lg-3">
+        <div class="card border-0">
+          <img src="../frontend/assets/img/blazer1.jpg" alt="FEATHER BLAZER" class="card-img-top rounded">
+          <div class="card-body px-0 pt-2">
+            <div class="d-flex justify-content-between align-items-center">
+              <h6 class="card-title mb-0" style="font-size: 0.9rem; font-weight: 500;">
+                FEATHER BLAZER
+              </h6>
+              <button class="btn btn-link p-0 border-0 text-dark" style="font-size: 1.1rem;">
+                <i class="bi bi-heart"></i>
+              </button>
+            </div>
+            <p class="text-muted mt-1" style="font-size: 0.85rem;">159,00 KM</p>
+          </div>
+        </div>
+      </div>
+
+      
+      <div class="col-6 col-lg-3">
+        <div class="card border-0">
+          <img src="../frontend/assets/img/blazer2.jpg" alt="DOUBLE-BREASTED VELVET FEATHER BLAZER" class="card-img-top rounded">
+          <div class="card-body px-0 pt-2">
+            <div class="d-flex justify-content-between align-items-center">
+              <h6 class="card-title mb-0" style="font-size: 0.9rem; font-weight: 500;">
+                DOUBLE-BREASTED VELVET FEATHER BLAZER
+              </h6>
+              <button class="btn btn-link p-0 border-0 text-dark" style="font-size: 1.1rem;">
+                <i class="bi bi-heart"></i>
+              </button>
+            </div>
+            <p class="text-muted mt-1" style="font-size: 0.85rem;">159,00 KM</p>
+          </div>
+        </div>
+      </div>
+
     
-</section>
+      <div class="col-6 col-lg-3">
+        <div class="card border-0">
+          <img src="../frontend/assets/img/blazer3.jpg" alt="DOUBLE-BREASTED BLAZER WITH SHOULDER PADS" class="card-img-top rounded">
+          <div class="card-body px-0 pt-2">
+            <div class="d-flex justify-content-between align-items-center">
+              <h6 class="card-title mb-0" style="font-size: 0.9rem; font-weight: 500;">
+                DOUBLE-BREASTED BLAZER WITH SHOULDER PADS
+              </h6>
+              <button class="btn btn-link p-0 border-0 text-dark" style="font-size: 1.1rem;">
+                <i class="bi bi-heart"></i>
+              </button>
+            </div>
+            <p class="text-muted mt-1" style="font-size: 0.85rem;">99,95 KM</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-6 col-lg-3">
+        <div class="card border-0">
+          <img src="../frontend/assets/img/blazer4.jpg" alt=" OVERSIZE CHECK BLAZER WITH WOOL ZW COLLECTION" class="card-img-top rounded">
+          <div class="card-body px-0 pt-2">
+            <div class="d-flex justify-content-between align-items-center">
+              <h6 class="card-title mb-0" style="font-size: 0.9rem; font-weight: 500;">
+                OVERSIZE CHECK BLAZER WITH WOOL ZW COLLECTION
+              </h6>
+              <button class="btn btn-link p-0 border-0 text-dark" style="font-size: 1.1rem;">
+                <i class="bi bi-heart"></i>
+              </button>
+            </div>
+            <p class="text-muted mt-1" style="font-size: 0.85rem;">159,00 KM</p>
+          </div>
+        </div>
+    </div>
+
+      <div class="col-6 col-lg-3">
+        <div class="card border-0">
+          <img src="../frontend/assets/img/blazer5.jpg" alt="ZW COLLECTION DOUBLE-BREASTED STRAIGHT BLAZER" class="card-img-top rounded">
+          <div class="card-body px-0 pt-2">
+            <div class="d-flex justify-content-between align-items-center">
+              <h6 class="card-title mb-0" style="font-size: 0.9rem; font-weight: 500;">
+                ZW COLLECTION DOUBLE-BREASTED STRAIGHT BLAZER
+              </h6>
+              <button class="btn btn-link p-0 border-0 text-dark" style="font-size: 1.1rem;">
+                <i class="bi bi-heart"></i>
+              </button>
+            </div>
+            <p class="text-muted mt-1" style="font-size: 0.85rem;">179,00 KM</p>
+          </div>
+        </div>
+    </div>
+
+      <div class="col-6 col-lg-3">
+        <div class="card border-0">
+          <img src="../frontend/assets/img/blazer6.jpg" alt="ZW COLLECTION LIMITED EDITION FITTED BLAZER" class="card-img-top rounded">
+          <div class="card-body px-0 pt-2">
+            <div class="d-flex justify-content-between align-items-center">
+              <h6 class="card-title mb-0" style="font-size: 0.9rem; font-weight: 500;">
+                ZW COLLECTION LIMITED EDITION FITTED BLAZER
+              </h6>
+              <button class="btn btn-link p-0 border-0 text-dark" style="font-size: 1.1rem;">
+                <i class="bi bi-heart"></i>
+              </button>
+            </div>
+            <p class="text-muted mt-1" style="font-size: 0.85rem;">179,00 KM</p>
+          </div>
+        </div>
+    </div>
+
+      <div class="col-6 col-lg-3">
+        <div class="card border-0">
+          <img src="../frontend/assets/img/blazer7.jpg" alt="DOUBLE-BREASTED BLAZER WITH SHOULDER PADS" class="card-img-top rounded">
+          <div class="card-body px-0 pt-2">
+            <div class="d-flex justify-content-between align-items-center">
+              <h6 class="card-title mb-0" style="font-size: 0.9rem; font-weight: 500;">
+               DOUBLE-BREASTED BLAZER WITH SHOULDER PADS
+              </h6>
+              <button class="btn btn-link p-0 border-0 text-dark" style="font-size: 1.1rem;">
+                <i class="bi bi-heart"></i>
+              </button>
+            </div>
+            <p class="text-muted mt-1" style="font-size: 0.85rem;">99,95 KM</p>
+          </div>
+        </div>
+    </div>
+
+      <div class="col-6 col-lg-3">
+        <div class="card border-0">
+          <img src="../frontend/assets/img/blazer8.jpg" alt="BLAZER WITH SHOULDER PADS AND BELT" class="card-img-top rounded">
+          <div class="card-body px-0 pt-2">
+            <div class="d-flex justify-content-between align-items-center">
+              <h6 class="card-title mb-0" style="font-size: 0.9rem; font-weight: 500;">
+                BLAZER WITH SHOULDER PADS AND BELT
+              </h6>
+              <button class="btn btn-link p-0 border-0 text-dark" style="font-size: 1.1rem;">
+                <i class="bi bi-heart"></i>
+              </button>
+            </div>
+            <p class="text-muted mt-1" style="font-size: 0.85rem;">89,95 KM</p>
+          </div>
+        </div>
+    </div>
+
+      <div class="col-6 col-lg-3">
+        <div class="card border-0">
+          <img src="../frontend/assets/img/blazer9.jpg" alt="  BLAZER WITH SHOULDER PADS AND BELT" class="card-img-top rounded">
+          <div class="card-body px-0 pt-2">
+            <div class="d-flex justify-content-between align-items-center">
+              <h6 class="card-title mb-0" style="font-size: 0.9rem; font-weight: 500;">
+                  BLAZER WITH SHOULDER PADS AND BELT
+              </h6>
+              <button class="btn btn-link p-0 border-0 text-dark" style="font-size: 1.1rem;">
+                <i class="bi bi-heart"></i>
+              </button>
+            </div>
+            <p class="text-muted mt-1" style="font-size: 0.85rem;">159,00 KM</p>
+          </div>
+        </div>
+    </div>
+
+      <div class="col-6 col-lg-3">
+        <div class="card border-0">
+          <img src="assets/img/blazer10.jpg" alt="TAILORED BLAZER" class="card-img-top rounded">
+          <div class="card-body px-0 pt-2">
+            <div class="d-flex justify-content-between align-items-center">
+              <h6 class="card-title mb-0" style="font-size: 0.9rem; font-weight: 500;">
+                TAILORED BLAZER
+              </h6>
+              <button class="btn btn-link p-0 border-0 text-dark" style="font-size: 1.1rem;">
+                <i class="bi bi-heart"></i>
+              </button>
+            </div>
+            <p class="text-muted mt-1" style="font-size: 0.85rem;">109,00 KM</p>
+          </div>
+        </div>
+    </div>
+      <div class="col-6 col-lg-3">
+        <div class="card border-0">
+          <img src="../frontend/assets/img/blazer11.jpg" alt="ZW COLLECTION DOUBLE-BREASTED BLAZER DRESS" class="card-img-top rounded">
+          <div class="card-body px-0 pt-2">
+            <div class="d-flex justify-content-between align-items-center">
+              <h6 class="card-title mb-0" style="font-size: 0.9rem; font-weight: 500;">
+                ZW COLLECTION DOUBLE-BREASTED BLAZER DRESS
+              </h6>
+              <button class="btn btn-link p-0 border-0 text-dark" style="font-size: 1.1rem;">
+                <i class="bi bi-heart"></i>
+              </button>
+            </div>
+            <p class="text-muted mt-1" style="font-size: 0.85rem;">219,00 KM</p>
+          </div>
+        </div>
+    </div>
+      <div class="col-6 col-lg-3">
+        <div class="card border-0">
+          <img src="../frontend/assets/img/blazer12.jpg" alt="DOUBLE-BREASTED BLAZER WITH SHOULDER PADS" class="card-img-top rounded">
+          <div class="card-body px-0 pt-2">
+            <div class="d-flex justify-content-between align-items-center">
+              <h6 class="card-title mb-0" style="font-size: 0.9rem; font-weight: 500;">
+                DOUBLE-BREASTED BLAZER WITH SHOULDER PADS
+              </h6>
+              <button class="btn btn-link p-0 border-0 text-dark" style="font-size: 1.1rem;">
+                <i class="bi bi-heart"></i>
+              </button>
+            </div>
+            <p class="text-muted mt-1" style="font-size: 0.85rem;">109,00 KM</p>
+          </div>
+        </div>
+    </div>
+
+</div></div></section>
