--- a/frontend/index.html
+++ b/frontend/index.html
@@ -22,6 +22,9 @@
     <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
 
     <!-- Customized Bootstrap Stylesheet -->
+     <!-- Bootstrap Icons -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
+
      
     <link href="./assets/css/spapp.css" rel="stylesheet">
     <link href="./assets/css/style.css" rel="stylesheet">
