--- a/frontend/pages/jackets.html
+++ b/frontend/pages/jackets.html
@@ -1,3 +1,177 @@
-<section id="jackets">
+<section id="jackets" class="py-5">
+  <div class="container">
+    <h2 class="mb-4 text-center">JACKETS</h2>
+    <div class="row g-4">
+
+      <div class="col-6 col-lg-3">
+        <div class="card border-0">
+          <img src="../frontend/assets/img/jacket1.jpg" alt="FAUX FUR COLLAR BOMBER JACKET ZW COLLECTION" class="card-img-top rounded">
+          <div class="card-body px-0 pt-2">
+            <div class="d-flex justify-content-between align-items-center">
+              <h6 class="card-title mb-0" style="font-size: 0.9rem; font-weight: 500;">
+                    FAUX FUR COLLAR BOMBER JACKET ZW COLLECTION
+              </h6>
+              <button class="btn btn-link p-0 border-0 text-dark" style="font-size: 1.1rem;">
+                <i class="bi bi-heart"></i>
+              </button>
+            </div>
+            <p class="text-muted mt-1" style="font-size: 0.85rem;">99,95 KM</p>
+          </div>
+        </div>
+      </div>
+
+      
+      <div class="col-6 col-lg-3">
+        <div class="card border-0">
+          <img src="../frontend/assets/img/jacket2.jpg" alt="ZW COLLECTION DOUBLE-FACED JACKET" class="card-img-top rounded">
+          <div class="card-body px-0 pt-2">
+            <div class="d-flex justify-content-between align-items-center">
+              <h6 class="card-title mb-0" style="font-size: 0.9rem; font-weight: 500;">
+                ZW COLLECTION DOUBLE-FACED JACKET
+              </h6>
+              <button class="btn btn-link p-0 border-0 text-dark" style="font-size: 1.1rem;">
+                <i class="bi bi-heart"></i>
+              </button>
+            </div>
+            <p class="text-muted mt-1" style="font-size: 0.85rem;">119,95 KM</p>
+          </div>
+        </div>
+      </div>
+
     
-</section>
+      <div class="col-6 col-lg-3">
+        <div class="card border-0">
+          <img src="../frontend/assets/img/jacket3.jpg" alt="SUEDE EFFECT BOMBER JACKET" class="card-img-top rounded">
+          <div class="card-body px-0 pt-2">
+            <div class="d-flex justify-content-between align-items-center">
+              <h6 class="card-title mb-0" style="font-size: 0.9rem; font-weight: 500;">
+               SUEDE EFFECT BOMBER JACKET
+              </h6>
+              <button class="btn btn-link p-0 border-0 text-dark" style="font-size: 1.1rem;">
+                <i class="bi bi-heart"></i>
+              </button>
+            </div>
+            <p class="text-muted mt-1" style="font-size: 0.85rem;">79,95 KM</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-6 col-lg-3">
+        <div class="card border-0">
+          <img src="../frontend/assets/img/jacket4.jpg" alt="TOGGLE SHOULDER PAD JACKET" class="card-img-top rounded">
+          <div class="card-body px-0 pt-2">
+            <div class="d-flex justify-content-between align-items-center">
+              <h6 class="card-title mb-0" style="font-size: 0.9rem; font-weight: 500;">
+               TOGGLE SHOULDER PAD JACKET
+              </h6>
+              <button class="btn btn-link p-0 border-0 text-dark" style="font-size: 1.1rem;">
+                <i class="bi bi-heart"></i>
+              </button>
+            </div>
+            <p class="text-muted mt-1" style="font-size: 0.85rem;">89,95 KM</p>
+          </div>
+        </div>
+    </div>
+
+      <div class="col-6 col-lg-3">
+        <div class="card border-0">
+          <img src="../frontend/assets/img/jacket5.jpg" alt="SUEDE EFFECT BOMBER JACKET" class="card-img-top rounded">
+          <div class="card-body px-0 pt-2">
+            <div class="d-flex justify-content-between align-items-center">
+              <h6 class="card-title mb-0" style="font-size: 0.9rem; font-weight: 500;">
+                SUEDE EFFECT BOMBER JACKET
+              </h6>
+              <button class="btn btn-link p-0 border-0 text-dark" style="font-size: 1.1rem;">
+                <i class="bi bi-heart"></i>
+              </button>
+            </div>
+            <p class="text-muted mt-1" style="font-size: 0.85rem;">79,00 KM</p>
+          </div>
+        </div>
+    </div>
+
+      <div class="col-6 col-lg-3">
+        <div class="card border-0">
+          <img src="../frontend/assets/img/jacket6.jpg" alt="CONTRAST PUFFER JACKET" class="card-img-top rounded">
+          <div class="card-body px-0 pt-2">
+            <div class="d-flex justify-content-between align-items-center">
+              <h6 class="card-title mb-0" style="font-size: 0.9rem; font-weight: 500;">
+                CONTRAST PUFFER JACKET
+              </h6>
+              <button class="btn btn-link p-0 border-0 text-dark" style="font-size: 1.1rem;">
+                <i class="bi bi-heart"></i>
+              </button>
+            </div>
+            <p class="text-muted mt-1" style="font-size: 0.85rem;">79,00 KM</p>
+          </div>
+        </div>
+    </div>
+
+      <div class="col-6 col-lg-3">
+        <div class="card border-0">
+          <img src="../frontend/assets/img/jacket7.jpg" alt="REVERSIBLE DOUBLE-FACED FAUX LEATHER JACKET" class="card-img-top rounded">
+          <div class="card-body px-0 pt-2">
+            <div class="d-flex justify-content-between align-items-center">
+              <h6 class="card-title mb-0" style="font-size: 0.9rem; font-weight: 500;">
+               REVERSIBLE DOUBLE-FACED FAUX LEATHER JACKET
+              </h6>
+              <button class="btn btn-link p-0 border-0 text-dark" style="font-size: 1.1rem;">
+                <i class="bi bi-heart"></i>
+              </button>
+            </div>
+            <p class="text-muted mt-1" style="font-size: 0.85rem;">99,95 KM</p>
+          </div>
+        </div>
+    </div>
+
+      <div class="col-6 col-lg-3">
+        <div class="card border-0">
+          <img src="../frontend/assets/img/jacket8.jpg" alt="WIDE-LEG TROUSERS WITH DOUBLE WAISTBAN" class="card-img-top rounded">
+          <div class="card-body px-0 pt-2">
+            <div class="d-flex justify-content-between align-items-center">
+              <h6 class="card-title mb-0" style="font-size: 0.9rem; font-weight: 500;">
+                WIDE-LEG TROUSERS WITH DOUBLE WAISTBAN
+              </h6>
+              <button class="btn btn-link p-0 border-0 text-dark" style="font-size: 1.1rem;">
+                <i class="bi bi-heart"></i>
+              </button>
+            </div>
+            <p class="text-muted mt-1" style="font-size: 0.85rem;">89,95 KM</p>
+          </div>
+        </div>
+    </div>
+
+      <div class="col-6 col-lg-3">
+        <div class="card border-0">
+          <img src="../frontend/assets/img/jacket9.jpg" alt="HIGH-COLLAR JACKET" class="card-img-top rounded">
+          <div class="card-body px-0 pt-2">
+            <div class="d-flex justify-content-between align-items-center">
+              <h6 class="card-title mb-0" style="font-size: 0.9rem; font-weight: 500;">
+                 HIGH-COLLAR JACKET
+              </h6>
+              <button class="btn btn-link p-0 border-0 text-dark" style="font-size: 1.1rem;">
+                <i class="bi bi-heart"></i>
+              </button>
+            </div>
+            <p class="text-muted mt-1" style="font-size: 0.85rem;">99,00 KM</p>
+          </div>
+        </div>
+    </div>
+
+       <div class="col-6 col-lg-3">
+        <div class="card border-0">
+          <img src="../frontend/assets/img/jacket10.jpg" alt="CONTRASTING TRIM BOMBER JACKET" class="card-img-top rounded">
+          <div class="card-body px-0 pt-2">
+            <div class="d-flex justify-content-between align-items-center">
+              <h6 class="card-title mb-0" style="font-size: 0.9rem; font-weight: 500;">
+                 CONTRASTING TRIM BOMBER JACKET
+              </h6>
+              <button class="btn btn-link p-0 border-0 text-dark" style="font-size: 1.1rem;">
+                <i class="bi bi-heart"></i>
+              </button>
+            </div>
+            <p class="text-muted mt-1" style="font-size: 0.85rem;">89,00 KM</p>
+          </div>
+        </div>
+    </div>
+</div></div></section>
