--- a/frontend/pages/knitwear.html
+++ b/frontend/pages/knitwear.html
@@ -1,3 +1,177 @@
-<section id="knitwear">
+<section id="knitwear" class="py-5">
+  <div class="container">
+    <h2 class="mb-4 text-center">KNITWEAR</h2>
+    <div class="row g-4">
+
+      <div class="col-6 col-lg-3">
+        <div class="card border-0">
+          <img src="../frontend/assets/img/k1.jpg" alt="HERRINGBONE WOOL WAISTCOAT" class="card-img-top rounded">
+          <div class="card-body px-0 pt-2">
+            <div class="d-flex justify-content-between align-items-center">
+              <h6 class="card-title mb-0" style="font-size: 0.9rem; font-weight: 500;">
+                    HERRINGBONE WOOL WAISTCOAT
+              </h6>
+              <button class="btn btn-link p-0 border-0 text-dark" style="font-size: 1.1rem;">
+                <i class="bi bi-heart"></i>
+              </button>
+            </div>
+            <p class="text-muted mt-1" style="font-size: 0.85rem;">39,95 KM</p>
+          </div>
+        </div>
+      </div>
+
+      
+      <div class="col-6 col-lg-3">
+        <div class="card border-0">
+          <img src="../frontend/assets/img/k2.jpg" alt="PLAIN KNIT JUMPER" class="card-img-top rounded">
+          <div class="card-body px-0 pt-2">
+            <div class="d-flex justify-content-between align-items-center">
+              <h6 class="card-title mb-0" style="font-size: 0.9rem; font-weight: 500;">
+                PLAIN KNIT JUMPER
+              </h6>
+              <button class="btn btn-link p-0 border-0 text-dark" style="font-size: 1.1rem;">
+                <i class="bi bi-heart"></i>
+              </button>
+            </div>
+            <p class="text-muted mt-1" style="font-size: 0.85rem;">49,95 KM</p>
+          </div>
+        </div>
+      </div>
+
     
-</section>
+      <div class="col-6 col-lg-3">
+        <div class="card border-0">
+          <img src="../frontend/assets/img/k3.jpg" alt="SOFT KNIT HIGH NECK JUMPER" class="card-img-top rounded">
+          <div class="card-body px-0 pt-2">
+            <div class="d-flex justify-content-between align-items-center">
+              <h6 class="card-title mb-0" style="font-size: 0.9rem; font-weight: 500;">
+               SOFT KNIT HIGH NECK JUMPER
+              </h6>
+              <button class="btn btn-link p-0 border-0 text-dark" style="font-size: 1.1rem;">
+                <i class="bi bi-heart"></i>
+              </button>
+            </div>
+            <p class="text-muted mt-1" style="font-size: 0.85rem;">49,95 KM</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-6 col-lg-3">
+        <div class="card border-0">
+          <img src="../frontend/assets/img/k4.jpg" alt="ASYMMETRIC TEXTURED KNIT JUMPER" class="card-img-top rounded">
+          <div class="card-body px-0 pt-2">
+            <div class="d-flex justify-content-between align-items-center">
+              <h6 class="card-title mb-0" style="font-size: 0.9rem; font-weight: 500;">
+               ASYMMETRIC TEXTURED KNIT JUMPER
+              </h6>
+              <button class="btn btn-link p-0 border-0 text-dark" style="font-size: 1.1rem;">
+                <i class="bi bi-heart"></i>
+              </button>
+            </div>
+            <p class="text-muted mt-1" style="font-size: 0.85rem;">59,95 KM</p>
+          </div>
+        </div>
+    </div>
+
+      <div class="col-6 col-lg-3">
+        <div class="card border-0">
+          <img src="../frontend/assets/img/k5.jpg" alt="95% WOOL HIGH NECK JUMPER" class="card-img-top rounded">
+          <div class="card-body px-0 pt-2">
+            <div class="d-flex justify-content-between align-items-center">
+              <h6 class="card-title mb-0" style="font-size: 0.9rem; font-weight: 500;">
+                95% WOOL HIGH NECK JUMPER
+              </h6>
+              <button class="btn btn-link p-0 border-0 text-dark" style="font-size: 1.1rem;">
+                <i class="bi bi-heart"></i>
+              </button>
+            </div>
+            <p class="text-muted mt-1" style="font-size: 0.85rem;">49,95 KM</p>
+          </div>
+        </div>
+    </div>
+
+      <div class="col-6 col-lg-3">
+        <div class="card border-0">
+          <img src="../frontend/assets/img/k6.jpg" alt="KNIT BATWING SLEEVE JUMPER" class="card-img-top rounded">
+          <div class="card-body px-0 pt-2">
+            <div class="d-flex justify-content-between align-items-center">
+              <h6 class="card-title mb-0" style="font-size: 0.9rem; font-weight: 500;">
+                KNIT BATWING SLEEVE JUMPER
+              </h6>
+              <button class="btn btn-link p-0 border-0 text-dark" style="font-size: 1.1rem;">
+                <i class="bi bi-heart"></i>
+              </button>
+            </div>
+            <p class="text-muted mt-1" style="font-size: 0.85rem;">59,00 KM</p>
+          </div>
+        </div>
+    </div>
+
+      <div class="col-6 col-lg-3">
+        <div class="card border-0">
+          <img src="../frontend/assets/img/k7.jpg" alt="BASIC PLAIN KNIT JUMPER" class="card-img-top rounded">
+          <div class="card-body px-0 pt-2">
+            <div class="d-flex justify-content-between align-items-center">
+              <h6 class="card-title mb-0" style="font-size: 0.9rem; font-weight: 500;">
+               BASIC PLAIN KNIT JUMPER
+              </h6>
+              <button class="btn btn-link p-0 border-0 text-dark" style="font-size: 1.1rem;">
+                <i class="bi bi-heart"></i>
+              </button>
+            </div>
+            <p class="text-muted mt-1" style="font-size: 0.85rem;">45,95 KM</p>
+          </div>
+        </div>
+    </div>
+
+      <div class="col-6 col-lg-3">
+        <div class="card border-0">
+          <img src="../frontend/assets/img/k8.jpg" alt="KNIT JUMPER WITH KNOTTED BACK" class="card-img-top rounded">
+          <div class="card-body px-0 pt-2">
+            <div class="d-flex justify-content-between align-items-center">
+              <h6 class="card-title mb-0" style="font-size: 0.9rem; font-weight: 500;">
+                KNIT JUMPER WITH KNOTTED BACK
+              </h6>
+              <button class="btn btn-link p-0 border-0 text-dark" style="font-size: 1.1rem;">
+                <i class="bi bi-heart"></i>
+              </button>
+            </div>
+            <p class="text-muted mt-1" style="font-size: 0.85rem;">49,95 KM</p>
+          </div>
+        </div>
+    </div>
+
+      <div class="col-6 col-lg-3">
+        <div class="card border-0">
+          <img src="../frontend/assets/img/k9.jpg" alt="SOFT KNIT JUMPER" class="card-img-top rounded">
+          <div class="card-body px-0 pt-2">
+            <div class="d-flex justify-content-between align-items-center">
+              <h6 class="card-title mb-0" style="font-size: 0.9rem; font-weight: 500;">
+                SOFT KNIT JUMPER
+              </h6>
+              <button class="btn btn-link p-0 border-0 text-dark" style="font-size: 1.1rem;">
+                <i class="bi bi-heart"></i>
+              </button>
+            </div>
+            <p class="text-muted mt-1" style="font-size: 0.85rem;">49,00 KM</p>
+          </div>
+        </div>
+    </div>
+
+       <div class="col-6 col-lg-3">
+        <div class="card border-0">
+          <img src="../frontend/assets/img/k10.jpg" alt="SOFT KNIT V-NECK JUMPER" class="card-img-top rounded">
+          <div class="card-body px-0 pt-2">
+            <div class="d-flex justify-content-between align-items-center">
+              <h6 class="card-title mb-0" style="font-size: 0.9rem; font-weight: 500;">
+                 SOFT KNIT V-NECK JUMPER
+              </h6>
+              <button class="btn btn-link p-0 border-0 text-dark" style="font-size: 1.1rem;">
+                <i class="bi bi-heart"></i>
+              </button>
+            </div>
+            <p class="text-muted mt-1" style="font-size: 0.85rem;">59,00 KM</p>
+          </div>
+        </div>
+    </div>
+</div></div></section>
