--- a/frontend/pages/tops.html
+++ b/frontend/pages/tops.html
@@ -1,3 +1,177 @@
-<section id="tops">
+<section id="jackets" class="py-5">
+  <div class="container">
+    <h2 class="mb-4 text-center">TOPS</h2>
+    <div class="row g-4">
+
+      <div class="col-6 col-lg-3">
+        <div class="card border-0">
+          <img src="../frontend/assets/img/top1.jpg" alt="RIB FAUX FUR TOP" class="card-img-top rounded">
+          <div class="card-body px-0 pt-2">
+            <div class="d-flex justify-content-between align-items-center">
+              <h6 class="card-title mb-0" style="font-size: 0.9rem; font-weight: 500;">
+                    RIB FAUX FUR TOP
+              </h6>
+              <button class="btn btn-link p-0 border-0 text-dark" style="font-size: 1.1rem;">
+                <i class="bi bi-heart"></i>
+              </button>
+            </div>
+            <p class="text-muted mt-1" style="font-size: 0.85rem;">39,95 KM</p>
+          </div>
+        </div>
+      </div>
+
+      
+      <div class="col-6 col-lg-3">
+        <div class="card border-0">
+          <img src="../frontend/assets/img/top2.jpg" alt="FAUX LEATHER BELTED TOP" class="card-img-top rounded">
+          <div class="card-body px-0 pt-2">
+            <div class="d-flex justify-content-between align-items-center">
+              <h6 class="card-title mb-0" style="font-size: 0.9rem; font-weight: 500;">
+                FAUX LEATHER BELTED TOP
+              </h6>
+              <button class="btn btn-link p-0 border-0 text-dark" style="font-size: 1.1rem;">
+                <i class="bi bi-heart"></i>
+              </button>
+            </div>
+            <p class="text-muted mt-1" style="font-size: 0.85rem;">49,95 KM</p>
+          </div>
+        </div>
+      </div>
+
     
-</section>
+      <div class="col-6 col-lg-3">
+        <div class="card border-0">
+          <img src="../frontend/assets/img/top3.jpg" alt="KNIT TOP WITH FLORAL STRAPS" class="card-img-top rounded">
+          <div class="card-body px-0 pt-2">
+            <div class="d-flex justify-content-between align-items-center">
+              <h6 class="card-title mb-0" style="font-size: 0.9rem; font-weight: 500;">
+               KNIT TOP WITH FLORAL STRAPS
+              </h6>
+              <button class="btn btn-link p-0 border-0 text-dark" style="font-size: 1.1rem;">
+                <i class="bi bi-heart"></i>
+              </button>
+            </div>
+            <p class="text-muted mt-1" style="font-size: 0.85rem;">29,95 KM</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-6 col-lg-3">
+        <div class="card border-0">
+          <img src="../frontend/assets/img/top4.jpg" alt="LONG SLEEVE LACE TOP" class="card-img-top rounded">
+          <div class="card-body px-0 pt-2">
+            <div class="d-flex justify-content-between align-items-center">
+              <h6 class="card-title mb-0" style="font-size: 0.9rem; font-weight: 500;">
+               LONG SLEEVE LACE TOP
+              </h6>
+              <button class="btn btn-link p-0 border-0 text-dark" style="font-size: 1.1rem;">
+                <i class="bi bi-heart"></i>
+              </button>
+            </div>
+            <p class="text-muted mt-1" style="font-size: 0.85rem;">39,95 KM</p>
+          </div>
+        </div>
+    </div>
+
+      <div class="col-6 col-lg-3">
+        <div class="card border-0">
+          <img src="../frontend/assets/img/top5.jpg" alt="KNIT PEPLUM TOP" class="card-img-top rounded">
+          <div class="card-body px-0 pt-2">
+            <div class="d-flex justify-content-between align-items-center">
+              <h6 class="card-title mb-0" style="font-size: 0.9rem; font-weight: 500;">
+                KNIT PEPLUM TOP
+              </h6>
+              <button class="btn btn-link p-0 border-0 text-dark" style="font-size: 1.1rem;">
+                <i class="bi bi-heart"></i>
+              </button>
+            </div>
+            <p class="text-muted mt-1" style="font-size: 0.85rem;">49,95 KM</p>
+          </div>
+        </div>
+    </div>
+
+      <div class="col-6 col-lg-3">
+        <div class="card border-0">
+          <img src="../frontend/assets/img/top6.jpg" alt="ASYMMETRIC NECK TOP" class="card-img-top rounded">
+          <div class="card-body px-0 pt-2">
+            <div class="d-flex justify-content-between align-items-center">
+              <h6 class="card-title mb-0" style="font-size: 0.9rem; font-weight: 500;">
+                ASYMMETRIC NECK TOP
+              </h6>
+              <button class="btn btn-link p-0 border-0 text-dark" style="font-size: 1.1rem;">
+                <i class="bi bi-heart"></i>
+              </button>
+            </div>
+            <p class="text-muted mt-1" style="font-size: 0.85rem;">29,00 KM</p>
+          </div>
+        </div>
+    </div>
+
+      <div class="col-6 col-lg-3">
+        <div class="card border-0">
+          <img src="../frontend/assets/img/top7.jpg" alt="POLYAMIDE BODYSUIT WITH METALLIC DETAIL" class="card-img-top rounded">
+          <div class="card-body px-0 pt-2">
+            <div class="d-flex justify-content-between align-items-center">
+              <h6 class="card-title mb-0" style="font-size: 0.9rem; font-weight: 500;">
+               POLYAMIDE BODYSUIT WITH METALLIC DETAIL
+              </h6>
+              <button class="btn btn-link p-0 border-0 text-dark" style="font-size: 1.1rem;">
+                <i class="bi bi-heart"></i>
+              </button>
+            </div>
+            <p class="text-muted mt-1" style="font-size: 0.85rem;">39,95 KM</p>
+          </div>
+        </div>
+    </div>
+
+      <div class="col-6 col-lg-3">
+        <div class="card border-0">
+          <img src="../frontend/assets/img/top8.jpg" alt="SATIN HALTER TOP" class="card-img-top rounded">
+          <div class="card-body px-0 pt-2">
+            <div class="d-flex justify-content-between align-items-center">
+              <h6 class="card-title mb-0" style="font-size: 0.9rem; font-weight: 500;">
+                SATIN HALTER TOP
+              </h6>
+              <button class="btn btn-link p-0 border-0 text-dark" style="font-size: 1.1rem;">
+                <i class="bi bi-heart"></i>
+              </button>
+            </div>
+            <p class="text-muted mt-1" style="font-size: 0.85rem;">39,95 KM</p>
+          </div>
+        </div>
+    </div>
+
+      <div class="col-6 col-lg-3">
+        <div class="card border-0">
+          <img src="../frontend/assets/img/top9.jpg" alt="GATHERED CREPE TOP" class="card-img-top rounded">
+          <div class="card-body px-0 pt-2">
+            <div class="d-flex justify-content-between align-items-center">
+              <h6 class="card-title mb-0" style="font-size: 0.9rem; font-weight: 500;">
+                 GATHERED CREPE TOP
+              </h6>
+              <button class="btn btn-link p-0 border-0 text-dark" style="font-size: 1.1rem;">
+                <i class="bi bi-heart"></i>
+              </button>
+            </div>
+            <p class="text-muted mt-1" style="font-size: 0.85rem;">49,00 KM</p>
+          </div>
+        </div>
+    </div>
+
+       <div class="col-6 col-lg-3">
+        <div class="card border-0">
+          <img src="../frontend/assets/img/top10.jpg" alt="GATHERED CREPE TOP" class="card-img-top rounded">
+          <div class="card-body px-0 pt-2">
+            <div class="d-flex justify-content-between align-items-center">
+              <h6 class="card-title mb-0" style="font-size: 0.9rem; font-weight: 500;">
+                 GATHERED CREPE TOP
+              </h6>
+              <button class="btn btn-link p-0 border-0 text-dark" style="font-size: 1.1rem;">
+                <i class="bi bi-heart"></i>
+              </button>
+            </div>
+            <p class="text-muted mt-1" style="font-size: 0.85rem;">39,00 KM</p>
+          </div>
+        </div>
+    </div>
+</div></div></section>
