--- a/frontend/pages/shop.html
+++ b/frontend/pages/shop.html
@@ -1,9 +1,176 @@
-<section id="shop" class="d-flex align-items-center justify-content-center text-center" style="min-height: 100vh;">
-  <div>
-    <h2 class="fw-light text-uppercase" style="letter-spacing: 2px;">Shop</h2>
-    <p class="text-muted mt-3" style="font-size: 1.1rem;">Arriving Soon...</p>
-    <a href="#home" class="btn btn-dark mt-4 rounded-0 px-4 py-2" style="font-size: 0.9rem; letter-spacing: 1px;">
-      BACK TO HOME
-    </a>
+<section id="shop" class="py-5">
+  <div class="container">
+    <h2 class="mb-4 text-center">NEW ARRIVALS</h2>
+    <div class="row g-4">
+
+      <!-- 1. blazer -->
+      <div class="col-6 col-lg-3">
+        <div class="card border-0">
+          <img src="../frontend/assets/img/blazer1.jpg" alt="FEATHER BLAZER" class="card-img-top rounded">
+          <div class="card-body px-0 pt-2">
+            <div class="d-flex justify-content-between align-items-center">
+              <h6 class="card-title mb-0" style="font-size: 0.9rem; font-weight: 500;">FEATHER BLAZER</h6>
+              <button class="btn btn-link p-0 border-0 text-dark" style="font-size: 1.1rem;"><i class="bi bi-heart"></i></button>
+            </div>
+            <p class="text-muted mt-1" style="font-size: 0.85rem;">159,00 KM</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- 2. dress -->
+      <div class="col-6 col-lg-3">
+        <div class="card border-0">
+          <img src="../frontend/assets/img/dress1.jpg" alt="SHORT SATIN FEATHER DRESS" class="card-img-top rounded">
+          <div class="card-body px-0 pt-2">
+            <div class="d-flex justify-content-between align-items-center">
+              <h6 class="card-title mb-0" style="font-size: 0.9rem; font-weight: 500;">SHORT SATIN FEATHER DRESS</h6>
+              <button class="btn btn-link p-0 border-0 text-dark" style="font-size: 1.1rem;"><i class="bi bi-heart"></i></button>
+            </div>
+            <p class="text-muted mt-1" style="font-size: 0.85rem;">159,00 KM</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- 3. knitwear -->
+      <div class="col-6 col-lg-3">
+        <div class="card border-0">
+          <img src="../frontend/assets/img/k1.jpg" alt="HERRINGBONE WOOL WAISTCOAT" class="card-img-top rounded">
+          <div class="card-body px-0 pt-2">
+            <div class="d-flex justify-content-between align-items-center">
+              <h6 class="card-title mb-0" style="font-size: 0.9rem; font-weight: 500;">HERRINGBONE WOOL WAISTCOAT</h6>
+              <button class="btn btn-link p-0 border-0 text-dark" style="font-size: 1.1rem;"><i class="bi bi-heart"></i></button>
+            </div>
+            <p class="text-muted mt-1" style="font-size: 0.85rem;">39,95 KM</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- 4. blazer -->
+      <div class="col-6 col-lg-3">
+        <div class="card border-0">
+          <img src="../frontend/assets/img/blazer2.jpg" alt="DOUBLE-BREASTED VELVET FEATHER BLAZER" class="card-img-top rounded">
+          <div class="card-body px-0 pt-2">
+            <div class="d-flex justify-content-between align-items-center">
+              <h6 class="card-title mb-0" style="font-size: 0.9rem; font-weight: 500;">DOUBLE-BREASTED VELVET FEATHER BLAZER</h6>
+              <button class="btn btn-link p-0 border-0 text-dark" style="font-size: 1.1rem;"><i class="bi bi-heart"></i></button>
+            </div>
+            <p class="text-muted mt-1" style="font-size: 0.85rem;">159,00 KM</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- 5. dress -->
+      <div class="col-6 col-lg-3">
+        <div class="card border-0">
+          <img src="../frontend/assets/img/dress2.jpg" alt="SPARKLY VELVET MIDI DRESS" class="card-img-top rounded">
+          <div class="card-body px-0 pt-2">
+            <div class="d-flex justify-content-between align-items-center">
+              <h6 class="card-title mb-0" style="font-size: 0.9rem; font-weight: 500;">SPARKLY VELVET MIDI DRESS</h6>
+              <button class="btn btn-link p-0 border-0 text-dark" style="font-size: 1.1rem;"><i class="bi bi-heart"></i></button>
+            </div>
+            <p class="text-muted mt-1" style="font-size: 0.85rem;">79,95 KM</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- 6. knitwear -->
+      <div class="col-6 col-lg-3">
+        <div class="card border-0">
+          <img src="../frontend/assets/img/k2.jpg" alt="PLAIN KNIT JUMPER" class="card-img-top rounded">
+          <div class="card-body px-0 pt-2">
+            <div class="d-flex justify-content-between align-items-center">
+              <h6 class="card-title mb-0" style="font-size: 0.9rem; font-weight: 500;">PLAIN KNIT JUMPER</h6>
+              <button class="btn btn-link p-0 border-0 text-dark" style="font-size: 1.1rem;"><i class="bi bi-heart"></i></button>
+            </div>
+            <p class="text-muted mt-1" style="font-size: 0.85rem;">49,95 KM</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- 7. blazer -->
+      <div class="col-6 col-lg-3">
+        <div class="card border-0">
+          <img src="../frontend/assets/img/blazer3.jpg" alt="SATIN BLAZER WITH BELT" class="card-img-top rounded">
+          <div class="card-body px-0 pt-2">
+            <div class="d-flex justify-content-between align-items-center">
+              <h6 class="card-title mb-0" style="font-size: 0.9rem; font-weight: 500;">SATIN BLAZER WITH BELT</h6>
+              <button class="btn btn-link p-0 border-0 text-dark" style="font-size: 1.1rem;"><i class="bi bi-heart"></i></button>
+            </div>
+            <p class="text-muted mt-1" style="font-size: 0.85rem;">159,00 KM</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- 8. dress -->
+      <div class="col-6 col-lg-3">
+        <div class="card border-0">
+          <img src="../frontend/assets/img/dress3.jpg" alt="VELVET MINI DRESS WITH FEATHERS" class="card-img-top rounded">
+          <div class="card-body px-0 pt-2">
+            <div class="d-flex justify-content-between align-items-center">
+              <h6 class="card-title mb-0" style="font-size: 0.9rem; font-weight: 500;">VELVET MINI DRESS WITH FEATHERS</h6>
+              <button class="btn btn-link p-0 border-0 text-dark" style="font-size: 1.1rem;"><i class="bi bi-heart"></i></button>
+            </div>
+            <p class="text-muted mt-1" style="font-size: 0.85rem;">159,00 KM</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- 9. knitwear -->
+      <div class="col-6 col-lg-3">
+        <div class="card border-0">
+          <img src="../frontend/assets/img/k3.jpg" alt="CABLE-KNIT CARDIGAN" class="card-img-top rounded">
+          <div class="card-body px-0 pt-2">
+            <div class="d-flex justify-content-between align-items-center">
+              <h6 class="card-title mb-0" style="font-size: 0.9rem; font-weight: 500;">CABLE-KNIT CARDIGAN</h6>
+              <button class="btn btn-link p-0 border-0 text-dark" style="font-size: 1.1rem;"><i class="bi bi-heart"></i></button>
+            </div>
+            <p class="text-muted mt-1" style="font-size: 0.85rem;">69,95 KM</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- 10. blazer -->
+      <div class="col-6 col-lg-3">
+        <div class="card border-0">
+          <img src="../frontend/assets/img/blazer4.jpg" alt="TEXTURED BLAZER WITH PEARLS" class="card-img-top rounded">
+          <div class="card-body px-0 pt-2">
+            <div class="d-flex justify-content-between align-items-center">
+              <h6 class="card-title mb-0" style="font-size: 0.9rem; font-weight: 500;">TEXTURED BLAZER WITH PEARLS</h6>
+              <button class="btn btn-link p-0 border-0 text-dark" style="font-size: 1.1rem;"><i class="bi bi-heart"></i></button>
+            </div>
+            <p class="text-muted mt-1" style="font-size: 0.85rem;">179,00 KM</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- 11. dress -->
+      <div class="col-6 col-lg-3">
+        <div class="card border-0">
+          <img src="../frontend/assets/img/dress4.jpg" alt="MIDI LACE DRESS" class="card-img-top rounded">
+          <div class="card-body px-0 pt-2">
+            <div class="d-flex justify-content-between align-items-center">
+              <h6 class="card-title mb-0" style="font-size: 0.9rem; font-weight: 500;">MIDI LACE DRESS</h6>
+              <button class="btn btn-link p-0 border-0 text-dark" style="font-size: 1.1rem;"><i class="bi bi-heart"></i></button>
+            </div>
+            <p class="text-muted mt-1" style="font-size: 0.85rem;">129,00 KM</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- 12. knitwear -->
+      <div class="col-6 col-lg-3">
+        <div class="card border-0">
+          <img src="../frontend/assets/img/k4.jpg" alt="OVERSIZED KNIT SWEATER" class="card-img-top rounded">
+          <div class="card-body px-0 pt-2">
+            <div class="d-flex justify-content-between align-items-center">
+              <h6 class="card-title mb-0" style="font-size: 0.9rem; font-weight: 500;">OVERSIZED KNIT SWEATER</h6>
+              <button class="btn btn-link p-0 border-0 text-dark" style="font-size: 1.1rem;"><i class="bi bi-heart"></i></button>
+            </div>
+            <p class="text-muted mt-1" style="font-size: 0.85rem;">59,95 KM</p>
+          </div>
+        </div>
+      </div>
+
+    </div>
   </div>
 </section>
