--- a/frontend/pages/login.html
+++ b/frontend/pages/login.html
@@ -3,15 +3,15 @@
     Login
   </h2>
 
-  <form>
+  <form id="login-form">
     <div class="mb-3">
-      <label for="email" class="form-label" style="font-weight: 300;">Email address</label>
-      <input type="email" class="form-control rounded-0" id="email" placeholder="Enter your email">
+      <label for="email"  class="form-label" style="font-weight: 300;">Email address</label>
+      <input type="email" name="email" class="form-control rounded-0" id="email" placeholder="Enter your email">
     </div>
 
     <div class="mb-4">
       <label for="password" class="form-label" style="font-weight: 300;">Password</label>
-      <input type="password" class="form-control rounded-0" id="password" placeholder="Enter your password">
+      <input type="password" name="password" class="form-control rounded-0" id="password" placeholder="Enter your password">
     </div>
 
     <button type="submit" class="btn w-100 rounded-0" style="background-color: #111; color: #fff; text-transform: uppercase; letter-spacing: 1px;">
@@ -24,3 +24,14 @@
     </p>
   </form>
 </section>
+
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.17.0/jquery.validate.min.js"></script>
+   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+   <script src="https://cdn.jsdelivr.net/npm/toastr@2.1.4/build/toastr.min.js"></script>
+   <script src="utils/constants.js"></script>
+   <script src="services/user-service.js"></script>
+   <script type="text/javascript">
+     UserService.init();
+   </script>
+
