--- a/frontend/pages/dresses.html
+++ b/frontend/pages/dresses.html
@@ -6,13 +6,16 @@
       
       <div class="col-6 col-lg-3">
         <div class="card border-0">
-          <img src="../frontend/assets/img/dress1.jpg" alt="SHORT SATIN FEATHER DRESS" class="card-img-top rounded">
+          <img src="../frontend/assets/img/dress1.jpg" alt="SHORT SATIN FEATHER DRESS" class="card-img-top rounded product-image" data-id="1" 
+          data-name="SHORT SATIN FEATHER DRESS"
+          data-price="159"
+          data-image="../frontend/assets/img/dress1.jpg">
           <div class="card-body px-0 pt-2">
             <div class="d-flex justify-content-between align-items-center">
               <h6 class="card-title mb-0" style="font-size: 0.9rem; font-weight: 500;">
                 SHORT SATIN FEATHER DRESS
               </h6>
-              <button class="btn btn-link p-0 border-0 text-dark" style="font-size: 1.1rem;">
+              <button class="btn btn-link p-0 border-0 text-dark add-favorite" style="font-size: 1.1rem;" data-id="1">
                 <i class="bi bi-heart"></i>
               </button>
             </div>
