--- a/frontend/index.html
+++ b/frontend/index.html
@@ -219,22 +219,42 @@
 
     <!-- JavaScript Libraries -->
     <script src="./assets/js/jquery.min.js"></script>  <!-- jQuery -->
-    <script src="./assets/js/jquery.spapp.min.js"></script>  <!-- spapp-->
+    <!-- Validation -->      
+	<script src = "https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.17.0/jquery.validate.min.js"></script>
+    <!-- jQuery BlockUI -->     
+	<script src = "https://cdnjs.cloudflare.com/ajax/libs/jquery.blockUI/2.70/jquery.blockUI.min.js"></script>
+
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
+
+    <script src="./assets/js/jquery.spapp.min.js"></script>  <!-- spapp-->
+    <script src="./assets/js/router.js"></script>
+
+    <!-- Utils -->
+    <script src="utils/constants.js"></script>
+    <script src="utils/rest-client.js"></script>
+    <script src="utils/utils.js"></script>
+
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" rel="stylesheet" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+
+
+    <!-- Services -->
+    <script src="services/cart-service.js"></script> 
+    <script src="services/favorites-service.js"></script>
+    <script src="services/user-service.js"></script>
+    <script src="services/product-service.js"></script>
+    <script src="services/checkout-service.js"></script>
+    
     <script src="lib/easing/easing.min.js"></script>
     <script src="lib/owlcarousel/owl.carousel.min.js"></script>
 
-    <!-- Contact Javascript File -->
+    <!-- Contact Javascript File
     <script src="mail/jqBootstrapValidation.min.js"></script>
-    <script src="mail/contact.js"></script>
+    <script src="mail/contact.js"></script> -->
 
-
-    <script src="./assets/js/jquery.min.js"></script>
-    <script src="./assets/js/jquery.spapp.min.js"></script>
-    <script src="./assets/js/router.js"></script>
     <!-- Template Javascript -->
     <script src="./assets/js/main.js"></script>
 
+    <script src="services/cart-service.js"></script>
 
-    <script src="./assets/js/router.js"></script>
     </div></div></body>
