--- a/frontend/pages/cart.html
+++ b/frontend/pages/cart.html
@@ -1,7 +1,9 @@
-<section id="cart" class="container d-flex flex-column align-items-center justify-content-center" style="min-height: 70vh;">
-  <h2 class="fw-light text-uppercase" style="letter-spacing: 2px;">Your Cart</h2>
-  <p class="text-muted mt-3" style="font-size: 1.1rem;">Your cart is currently empty.</p>
-  <a href="#shop" class="btn btn-dark mt-4 rounded-0 px-4 py-2" style="font-size: 0.9rem; letter-spacing: 1px;">
-    CONTINUE SHOPPING
-  </a>
+<section id="cart" class="container py-5">
+  <h2>Your Cart</h2>
+
+  <div id="cart-items" class="mb-4"></div>
+
+  <h4>Total: <span id="cart-total">0 KM</span></h4>
+
+  <a href="#checkout" class="btn btn-dark mt-3">Buy</a>
 </section>
