--- a/frontend/pages/register.html
+++ b/frontend/pages/register.html
@@ -3,34 +3,67 @@
     Create Account
   </h2>
 
-  <form>
+  <form id="register-form">
+
     <div class="mb-3">
-      <label for="name" class="form-label" style="font-weight: 300;">Full Name</label>
-      <input type="text" class="form-control rounded-0" id="name" placeholder="Enter your full name">
+      <label for="name" class="form-label">Full Name</label>
+      <input
+        type="text"
+        class="form-control rounded-0"
+        id="name"
+        name="name"
+        placeholder="Enter your full name"
+        required
+      >
     </div>
 
     <div class="mb-3">
-      <label for="email" class="form-label" style="font-weight: 300;">Email address</label>
-      <input type="email" class="form-control rounded-0" id="email" placeholder="Enter your email">
+      <label for="email" class="form-label">Email address</label>
+      <input
+        type="email"
+        class="form-control rounded-0"
+        id="email"
+        name="email"
+        placeholder="Enter your email"
+        required
+      >
     </div>
 
     <div class="mb-3">
-      <label for="password" class="form-label" style="font-weight: 300;">Password</label>
-      <input type="password" class="form-control rounded-0" id="password" placeholder="Enter your password">
+      <label for="password" class="form-label">Password</label>
+      <input
+        type="password"
+        class="form-control rounded-0"
+        id="password"
+        name="password"
+        placeholder="Enter your password"
+        required
+      >
     </div>
 
     <div class="mb-4">
-      <label for="confirm-password" class="form-label" style="font-weight: 300;">Confirm Password</label>
-      <input type="password" class="form-control rounded-0" id="confirm-password" placeholder="Confirm your password">
+      <label for="confirm-password" class="form-label">Confirm Password</label>
+      <input
+        type="password"
+        class="form-control rounded-0"
+        id="confirm-password"
+        name="confirm_password"
+        placeholder="Confirm your password"
+        required
+      >
     </div>
 
-    <button type="submit" class="btn w-100 rounded-0" style="background-color: #111; color: #fff; text-transform: uppercase; letter-spacing: 1px;">
+    <button
+      type="submit"
+      class="btn w-100 rounded-0"
+      style="background-color:#111; color:#fff; text-transform:uppercase; letter-spacing:1px;">
       Register
     </button>
 
     <p class="text-center mt-3 mb-0" style="font-size: 0.9rem;">
-      Already have an account? 
-      <a href="#login" style="color: #111; text-decoration: underline;">Login here</a>
+      Already have an account?
+      <a href="#login" style="color:#111; text-decoration:underline;">Login here</a>
     </p>
+
   </form>
 </section>
